# stackburn

./: .env.example  .gitignore  README.md  debug-minimal.html  fix-wsl-tauri.sh  index.html  package-lock.json  package.json  setup.ps1  setup.sh  tailwind.config.ts  test-server.html  test-simple.html  test.html  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: burn_score.rs  main.rs
src-tauri/src/scanners/: drive_scanner.rs  github_scanner.rs  local_scanner.rs  mod.rs
src/api/: stackburn-api.ts
src/components/: .gitkeep  BurnCompleteModal.tsx  BurnScore.tsx  BurnScoreWidget.tsx  ClutterFilters.tsx  ClutterResults.tsx  ErrorBoundary.tsx  IntegrationPanel.tsx  MobileClutterCard.tsx  MobileFloatingBar.tsx  MobileIntegrationCard.tsx  OnboardingScreen.tsx  ShowChainModal.tsx
src/components/ui/: button.tsx
src/hooks/: useStackBurn.ts
src/pages/: Dashboard.tsx  Index.tsx  MobileDashboard.tsx  NotFound.tsx  TauriTest.tsx
