# src-tauri/Cargo.toml
[package]
name = "stackburn"
version = "0.1.0"
description = "AI-powered digital stack scanner and bloat detector"
authors = ["StackBurn Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.4"

# Hashing for duplicate detection
sha2 = "0.10"

# OAuth and authentication
url = "2.5"
base64 = "0.21"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
